# Rust-Full-Stack

./: .gitignore  README.md
async/: README.md
async/async_book/src/: main.rs
async/async_std/: Cargo.toml
async/async_std/chat/src/: .main.rs.swp  main.rs
async/async_std/src/: main.rs
async/block_on/: Cargo.toml
async/block_on/src/: main.rs
async/tokio/src/: main.rs
bench/libtest/: Cargo.toml
email/JavaScript/: README.md  package.json  server.js
email/JavaScript/controllers/: emailController.js
email/JavaScript/controllers/models/: Animal.js
email/JavaScript/routes/: email.js
email/Rust/client/lettre/: Cargo.toml
email/client/lettre/: Cargo.toml  test.rs  test_c.rs
email/client/lettre/src/: main.rs
email/client/web/: README.md
email/server/: server.js
email/server/db/: mongoose.js
email/server/express/: README.md
email/server/express/db/: mongoose.js
interval/async_std/src/: .main.rs.swp
interval/tokio/src/: .main.rs.swp
microservices_with_docker/mongodb/: Cargo.toml
microservices_with_docker/mongodb/src/: main.rs
unsafe/syscall/src/: main.rs
